--- a/Chatr/src/index.html
+++ b/Chatr/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  
+  <script>
+      var global = window;
+  </script>
   <title>Chatr</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
